actualizar pantalla de sistem apara mostrar la fecha y la hora en los prodcutos vendidos

--- a/v4posme_maui/Views/More/MorePage.xaml
+++ b/v4posme_maui/Views/More/MorePage.xaml
@@ -44,7 +44,7 @@
 
         <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
             <!-- Botón a la izquierda -->
-            <Button Text="Productos"
+            <Button Text="Inventario"
             BackgroundColor="{StaticResource PrimaryDark}"
             TextColor="White"
             Padding="10,10"
